# i3-wm-config

./: .gitignore  Makefile  README.md  config  config.tmpl  dmenu_update  i3pystatusconf.py  list_apps  render.py  requirements.txt  workspace_controller.py
helper/: pyproject.toml  requirements.txt
helper/src/: i3_list_apps.py  i3_status_bar.py  i3_workspace_controller.py
