[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "i3_wm_config"
version = "1.5.2"
description = "customized i3-wm config and helper scripts"
license = {text = "MIT"}
authors = [
    {name = "yuuki0xff", email = "yuuki0xff@gmail.com"},
]
dependencies = [
    # The policy of the i3pystatus package maintainer, numbered releases will no longer be created. The i3pystatus
    # should be installed from github.
    # https://i3pystatus.readthedocs.io/en/latest/installation.html
    "i3pystatus @ https://github.com/enkore/i3pystatus/archive/refs/heads/current.zip",
    "jinja2",
    "psutil",
]

[project.scripts]
i3-status-bar = "i3_status_bar:main"
i3-workspace-controller = "i3_workspace_controller:main"
i3-list-apps = "i3_list_apps:main"
